# Zirv-ui

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  rustfmt.toml
.github/workflows/: cd.yml  ci.yml
showcase/: Cargo.toml  Dockerfile  index.html
showcase/src/: main.rs  router.rs
showcase/src/components/: component_docs.rs  header.rs  mod.rs
showcase/src/components/hero/: hero.rs
showcase/src/layouts/: flex.rs  header.rs  mod.rs
showcase/src/pages/: about.rs  button.rs  container.rs  divider.rs  getting_started.rs  index.rs  loader.rs  mod.rs  not_found.rs  table.rs  text.rs  theme.rs  toast.rs
showcase/src/sections/: button.rs  container.rs  divider.rs  getting_started.rs  introduction.rs  loader.rs  mod.rs  table.rs  text.rs  theme.rs  toast.rs
showcase/src/services/: mod.rs  toast_service.rs
src/: lib.rs
src/button/: mod.rs
src/code_block/: highlight.rs  mod.rs
src/container/: component.rs  mod.rs
src/divider/: mod.rs
src/flex/: mod.rs
src/image/: mod.rs
src/list/: mod.rs
src/loader/: mod.rs
src/menu/: button.rs  component.rs  manager.rs  message.rs  mod.rs  provider.rs  use_menu.rs
src/options/: backgound.rs  border.rs  color.rs  display.rs  flex.rs  font.rs  mod.rs  overflow.rs  shadow.rs  size.rs  spacing.rs  z_index.rs
src/table/: mod.rs
src/text/: headline.rs  mod.rs  paragraph.rs  subheadline.rs
src/theme/: mod.rs
src/theme_toggle/: component.rs  manager.rs  mod.rs  provider.rs  use_theme.rs
src/toast/: component.rs  component_factory.rs  manager.rs  message.rs  mod.rs  provider.rs  use_toast.rs  utils.rs
style/: main.scss
style/abstract/: _variables.scss
style/base/: _animations.scss  _base.scss  _typography.scss
style/components/: _button.scss  _code.scss  _container.scss  _divider.scss  _image.scss  _loader.scss  _menu.scss  _table.scss  _toast.scss
style/layout/: _flex.scss  _header.scss
style/utility/: _background.scss  _border.scss  _color.scss  _display.scss  _flex.scss  _font.scss  _height.scss  _margin.scss  _overflow.scss  _padding.scss  _shadow.scss  _size.scss  _spacing.scss  _width.scss  _zindex.scss
style/variables/: _theme.scss
