[package]
name = "zirv-ui"
description = "Component library for Yew"
version = "0.2.1"
edition = "2021"
authors = ["Jonathan Solskov Jensen <josj@solskov-jensen.dk"]
repository = "https://github.com/Glubiz/Zirv-ui"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
time = { version = "0.3.34", features = ["local-offset", "wasm-bindgen"] }
uuid = { version = "1.8.0", features = ["v4", "js"] }
yew = { version = "0.21", default-features = false }
gloo = "0.11"
log = "0.4.21"
web-sys = "0.3.69"

[features]
full = ["toast", "flex"]
toast = []
flex = []