[package]
name = "zirv-ui"
description = "Component library for Yew"
version = "0.2.2"
edition = "2021"
authors = ["Jonathan Solskov Jensen <josj@solskov-jensen.dk"]
repository = "https://github.com/Glubiz/Zirv-ui"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
time = { version = "0.3.34", features = ["local-offset", "wasm-bindgen"] }
uuid = { version = "1.8.0", features = ["v4", "js"] }
yew = { version = "0.21", default-features = true }
gloo = "0.11"
log = "0.4.21"
wasm-bindgen = "0.2"
csscolorparser = "0.6.2"
syntect = "5.0"
web-sys = "0.3"
js-sys = "0.3"

[features]
full = [
  "button",
  "toast",
  "loader",
  "flex",
  "container",
  "text",
  "table",
  "image",
  "list",
  "menu",
  "code_block",
  "theme"
]
button = []
toast = []
loader = []
flex = []
container = []
text = []
table = []
image = []
list = []
menu = []
code_block = []
theme = []