[package]
name = "showcase"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-utils = "0.2"
gloo = "0.11"
log = "0.4"
serde_json = "1"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
yew-more-hooks = { version = "0.3.0", features = ["yew-hooks"] }
yew-router = "0.18"
zirv-ui = { path = "../", features = ["full"]}

# release profile settings to reduce the final binary size
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
